# amazon-product-search-dense-retrieval

./: README.md  pyproject.toml  tasks.py
.github/workflows/: lint_and_test.yaml
src/amazon_product_search_dense_retrieval/: __init__.py  ann_index.py  encoder.py  losses.py  retriever.py  trainer.py
src/amazon_product_search_dense_retrieval/encoders/: __init__.py  bert_encoder.py  bi_bert_encoder.py  bi_encoder.py  losses.py  pooler.py  sbert_encoder.py  text_encoder.py
src/amazon_product_search_dense_retrieval/retrievers/: multi_vector_retriever.py  single_vector_retriever.py
src/amazon_product_search_dense_retrieval/training/: data_module.py  trainer.py
src/amazon_product_search_dense_retrieval/traininig/: data_module.py  trainer.py
tests/: test_ann_index.py  test_encoder.py  test_losses.py  test_retriever.py
tests/encoders/: test_bert_encoder.py  test_bi_bert_encoder.py  test_bi_encoder.py  test_losses.py  test_pooler.py  test_sbert_encoder.py  test_text_encoder.py
tests/encoders/modules/: test_losses.py  test_pooler.py
tests/retrievers/: test_ann_index.py  test_multi_vector_retriever.py  test_single_vector_retriever.py
