[tool.poetry]
name = "amazon-product-search-dense-retrieval"
version = "0.1.0"
description = ""
authors = ["rejasupotaro <takiguchi0817@gmail.com>"]
readme = "README.md"
packages = [{include = "amazon_product_search_dense_retrieval", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
faiss-cpu = "^1.7.4"
pandas = "^2.0.1"
pytest = "^7.3.1"
torch = "^2.0.0"
transformers = "^4.28.1"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
sentencepiece = "^0.1.99"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.2.0"
black = "^23.3.0"
pyproject-flake8 = "^6.0.0.post1"
invoke = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503"

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
ignore_missing_imports = true
